[project]
name = "anidrone-comitizen-conventional-commits"
version = "0.1.0"

# Core dependencies
dependencies = ["commitizen"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."commitizen.plugin"]
anidrone_comitizen_conventional_commits = "anidrone_comitizen_conventional_commits:AnidroneConventionalCommitsCz"
